<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bj_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/title_register"

            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RQ_account"
            style="@style/account_waiKuang"

            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"

            android:autofillHints="账户"
            android:selectAllOnFocus="true"
            app:helperTextEnabled="true"
            app:helperText="@string/tips_account"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_account"
                style="@style/account_neiKuang"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RQ_password"

            style="@style/password_waiKuang"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            android:autofillHints="密码"
            android:hint="@string/prompt_password"
            android:selectAllOnFocus="true"
            app:helperTextEnabled="true"
            app:helperText="@string/tips_password"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RQ_account"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_password"
                style="@style/password_neiKuang"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RQ_confirm"
            style="@style/password_waiKuang"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            android:autofillHints="密码"
            android:hint="@string/prompt_confirm_password"
            android:selectAllOnFocus="true"
            app:helperTextEnabled="true"
            app:helperText="@string/tips_confirm"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RQ_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_confirm_password"
                style="@style/password_neiKuang"
                />
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/btn_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            android:text="@string/action_register"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RQ_confirm"
            app:layout_constraintHorizontal_bias="0.498"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/RQ_password"
            app:layout_constraintStart_toStartOf="@+id/RQ_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>